--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <title>Document</title>
 </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-ligth">
+    <nav class="navbar navbar-expand-lg navbar-ligth margin">
         <a class="navbar-brand" href="a"> 
           <img src="img/globallabs.png" width="80" height="80">
         </a>
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
             <li class="na-item">
-              <a class="nav-link" href="#">Quem somos</a>
+              <a class="nav-link" href="#quemsomos">Quem somos</a>
             </li>
             <li class="na-item">
-              <a class="nav-link" href="#">Parceiros</a>
+              <a class="nav-link" href="#parceiros">Parceiros</a>
             </li>
             <li class="na-item">
-              <a class="nav-link" href="#">Serviços</a>
+              <a class="nav-link" href="#servicos">Serviços</a>
             </li>
           </ul>
         </div>
@@ -30,12 +30,54 @@
 
      <section id="quemSomos">
        <div class="container-fluid quem-somos text-center margin">
-        <p>teste</p>
-       </div>
+        <h3 class="margin">Quem somos</h3>
+        <img src="img/app.png" class="rounded-circle" width="400" height="400">
+        <h3>Somos um time comprometido com os resultados</h3>
+      </div>
+     </section>
+     <section id="parceiros">
+        <div class="container-fluid text-center margin parceiros">
+          <h3 class="margin">Parceiros</h3>
+          <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                  <img src="img/dio.png" width="100%">
+                </div>
+                <div class="col-lg-4" >
+                  <img src="img/dio.png" width="100%">
+                </div>
+                <div class="col-lg-4">
+                    <img src="img/dio.png" width="100%">
+                </div>
+            </div>
+          </div>
      </section>
 
+     <section id="servicos">
+        <div class="container-fluid text-center margin sergicos">
+          <h3 class="margin">SERVICOS</h3>
+          <div class="container">
+             <div class="row">
+                  <div class="col-lg-4">
+                     <p>Nulla fermentum ante bibendum urna eleifend congue fermentum eget orci. Nullam consectetur porttitor ligula, et scelerisque metus dignissim sed. In hac habitasse platea dictumst.</p> 
+                      <img src="img/app.png" width="100%">
+                  </div>
+                  <div class="col-lg-4">
+                    <p>Nulla fermentum ante bibendum urna eleifend congue fermentum eget orci. Nullam consectetur porttitor ligula, et scelerisque metus dignissim sed. In hac habitasse platea dictumst.</p> 
+                      <img src="img/web.png" width="100%">
+                  </div>
+                  <div class="col-lg-4">
+                    <p>Nulla fermentum ante bibendum urna eleifend congue fermentum eget orci. Nullam consectetur porttitor ligula, et scelerisque metus dignissim sed. In hac habitasse platea dictumst.</p> 
+                      <img src="img/web.png" width="100%">
+                  </div>
+            </div>
+
+          </div>
+        </div>
+     </section>
+     
+     <footer class=" container-fluid text-center bg-footer margin">
+       <p>Desenvolvido por web.dio.me</p>
+     </footer>
   </body>
-
-
-
 </html>
